--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,9 +15,24 @@ html {
  */
 
 body {
+  display: flex;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding: 5px;
+  flex-direction:column ;
+  align-items:center;
+
+}
+
+.container {
+  width: 90vw;
+  display: flex;
+  flex-direction:column;
+  background-color: #f4f1ec;
+  align-items:center;
+  
 }
 
 /*
