--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -35,6 +35,19 @@ body {
   
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+
+
+/* Another tablet breakpoint is maximum width of 1024px */
+@media only screen and (min-width: 1024px) {
+  
+body {
+  flex-direction: row;
+}
+
+.container {
+  margin-top: 130px;
+  width: 60vw;
+  
+}
+
+} 
