--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -47,3 +47,11 @@ button {
     border-radius: 5px;
     border-style: solid;
 }
+
+@media only screen and (min-width: 1024px) {
+  
+textarea { 
+    width: 55vw;
+}
+        
+}  
