--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -34,6 +34,24 @@ body {
   
 }
 
+#scroll {
+  position:fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #e62739;
+  box-shadow: 0px 0px 10px black ;
+  border: none;
+  color: white;
+  outline: none;
+  cursor: pointer;
+}
+
+#scroll:active {
+  color: #cc2333;
+}
 
 
 /* Another tablet breakpoint is maximum width of 1024px */
