--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -21,8 +21,8 @@ nav {
 .navRight {
     font-size: 25px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* flex-direction: column;
+    align-items: center; */
   
 }
 
